--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,18 @@
     "prisma": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0"
-  }
+    "@prisma/client": "^5.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
