--- a/apprestaurante/package.json
+++ b/apprestaurante/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
